<resources>
    <string name="app_name">PorpeFood</string>
    <string name="btn_Register">Registrar novo pedido</string>
    <string name="btn_TotalHours">Gerenciar horário</string>

    <string name="home_screen_name">Home</string>

    <string name="registerOrder_screen_name">NOVO PEDIDO</string>
    <string name="registerOrder_hint">Descreva o pedido</string>

    <string name="timeManager_screen_name">BATIDA DE PONTO</string>

    <string name="btn_submit">Enviar</string>
    <string name="btn_start">Iniciar Expediente</string>
    <string name="btn_stop">Pausar</string>
    <string name="btn_resume">Retomar</string>
    <string name="btn_reset">Encerrar Expediente</string>

    <string name="header_default">Titulo</string>
</resources>