<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".TimeManagerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"

        android:text="@string/timeManager_screen_name"
        android:textSize="26sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""

        android:layout_gravity="center"
        android:layout_marginTop="52dp"

        android:textSize="52sp"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="280dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="36dp"

        android:text="@string/btn_start"
        android:textSize="20sp"

        android:onClick="onClickStart"/>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="280dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="16dp"

        android:text="@string/btn_stop"
        android:textSize="20sp"

        android:onClick="onClickStop"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="280dp"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="16dp"

        android:text="@string/btn_reset"
        android:textSize="20sp"

        android:onClick="onClickReset"/>

</LinearLayout>