<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/app_name"
        android:textSize="32dp"
        android:textAlignment="center"

        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>


    <TextView
        android:id="@+id/txtRegisterOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text=""
        android:textSize="20dp"
        android:textAlignment="center"

        android:layout_gravity="center"
        android:layout_marginTop="64dp"/>


    <Button
        android:id="@+id/btnRegisterOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/btn_Register"
        android:textSize="20dp"
        android:textAlignment="center"

        android:layout_gravity="center"
        android:layout_marginTop="24dp"

        android:onClick="onClickRegisterOrder"/>

    <Button
        android:id="@+id/btnTotalHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/btn_TotalHours"
        android:textSize="20dp"
        android:textAlignment="center"

        android:layout_gravity="center"
        android:layout_marginTop="16dp"

        android:onClick="onClickReturnHours"/>


</LinearLayout>